alterando retorno de dados para o usuário de tabela para div

--- a/css/principal.css
+++ b/css/principal.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
 
     text-align: center;
+
 }
 
 #input__id{
@@ -18,6 +19,16 @@ table{
 }
 
 .principal__personagem-imagem {
-    width: 50px;
+    width: 75px;
     border-radius: 6px;
+    text-align: center;
+}
+
+
+.principal__cartao-personagens {
+    margin: 6px auto;
+    background-color: rgb(161, 127, 255);
+    width: 150px;
+    padding: 15px;
+    border-radius: 10px;
 }
