--- a/css/principal.css
+++ b/css/principal.css
@@ -32,3 +32,11 @@ table{
     padding: 15px;
     border-radius: 10px;
 }
+
+.principal__cartao-episodios {
+    margin: 6px auto;
+    background-color: rgb(161, 127, 255);
+    width: 200px;
+    padding: 15px;
+    border-radius: 10px;
+}
