--- a/css/principal.css
+++ b/css/principal.css
@@ -28,9 +28,11 @@ input{
 }
 
 .principal__personagem-imagem {
-    width: 75px;
+    width: 150px;
     border-radius: 6px;
     text-align: center;
+
+    box-shadow: 2px 7px 7px 0px rgba(0,0,0,0.3);
 }
 
 
